pre rpa