@@ -1,5 +1,6 @@
 package by.bsuir.organizationservice.service;
 
+import by.bsuir.organizationservice.config.RabbitMQConfig;
 import by.bsuir.organizationservice.dto.AddEmployeeRequest;
 import by.bsuir.organizationservice.dto.EmployeeResponse;
 import by.bsuir.organizationservice.exception.AppException;
@@ -9,17 +10,19 @@ import by.bsuir.organizationservice.repository.OrganizationEmployeeRepository;
 import by.bsuir.organizationservice.repository.OrganizationReadModelRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
+import org.springframework.amqp.rabbit.core.RabbitTemplate;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDateTime;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -28,7 +31,8 @@ public class EmployeeManagementService {
 
     private final OrganizationEmployeeRepository employeeRepository;
     private final OrganizationReadModelRepository organizationRepository;
-    private final RestTemplate restTemplate = new RestTemplate();
+    private final RabbitTemplate rabbitTemplate;
+    private final RestTemplate restTemplate;
 
     @Transactional
     public EmployeeResponse addEmployee(UUID orgId, AddEmployeeRequest request) {
@@ -74,33 +78,119 @@ public class EmployeeManagementService {
         log.info("Employee {} removed from organization {}", userId, orgId);
     }
 
+    @Transactional
+    public void blockEmployee(UUID orgId, UUID userId) {
+        log.info("Blocking employee {} in organization {}", userId, orgId);
+
+        OrganizationEmployee employee = employeeRepository
+                .findByUserIdAndOrgIdAndIsActiveTrue(userId, orgId)
+                .orElseThrow(() -> AppException.notFound("Сотрудник не найден в организации"));
+
+        if (Boolean.TRUE.equals(employee.getIsBlocked())) {
+            throw AppException.conflict("Сотрудник уже заблокирован");
+        }
+
+        employee.setIsBlocked(true);
+        employee.setBlockedAt(LocalDateTime.now());
+        employeeRepository.save(employee);
+
+        publishEmployeeStatusChanged(userId, orgId, true);
+        log.info("Employee {} blocked in organization {}", userId, orgId);
+    }
+
+    @Transactional
+    public void unblockEmployee(UUID orgId, UUID userId) {
+        log.info("Unblocking employee {} in organization {}", userId, orgId);
+
+        OrganizationEmployee employee = employeeRepository
+                .findByUserIdAndOrgIdAndIsActiveTrue(userId, orgId)
+                .orElseThrow(() -> AppException.notFound("Сотрудник не найден в организации"));
+
+        if (!Boolean.TRUE.equals(employee.getIsBlocked())) {
+            throw AppException.conflict("Сотрудник не заблокирован");
+        }
+
+        employee.setIsBlocked(false);
+        employee.setBlockedAt(null);
+        employeeRepository.save(employee);
+
+        publishEmployeeStatusChanged(userId, orgId, false);
+        log.info("Employee {} unblocked in organization {}", userId, orgId);
+    }
+
+    private void publishEmployeeStatusChanged(UUID userId, UUID orgId, boolean blocked) {
+        try {
+            Map<String, Object> payload = new HashMap<>();
+            payload.put("userId", userId.toString());
+            payload.put("orgId", orgId.toString());
+            payload.put("blocked", blocked);
+            payload.put("timestamp", LocalDateTime.now().toString());
+
+            rabbitTemplate.convertAndSend(
+                    RabbitMQConfig.ORGANIZATION_EXCHANGE,
+                    RabbitMQConfig.EMPLOYEE_STATUS_CHANGED_KEY,
+                    payload
+            );
+        } catch (Exception e) {
+            log.error("Failed to publish employee.status.changed for user {}: {}", userId, e.getMessage(), e);
+        }
+    }
+
     @Transactional(readOnly = true)
-    public List<EmployeeResponse> getOrganizationEmployees(UUID orgId) {
-        log.info("Getting employees for organization {}", orgId);
+    public Page<EmployeeResponse> getOrganizationEmployees(UUID orgId, Pageable pageable) {
+        log.info("Getting employees for organization {} (page={}, size={})",
+                orgId, pageable.getPageNumber(), pageable.getPageSize());
 
-        List<OrganizationEmployee> employees = employeeRepository.findByOrgIdAndIsActiveTrue(orgId);
+        Page<OrganizationEmployee> page = employeeRepository.findByOrgIdAndIsActiveTrue(orgId, pageable);
+        if (page.isEmpty()) {
+            return page.map(emp -> mapToEmployeeResponse(emp, fallbackUser(emp.getUserId())));
+        }
 
-        return employees.stream()
-                .map(emp -> {
-                    Map<String, Object> userInfo = getUserInfo(emp.getUserId());
-                    return mapToEmployeeResponse(emp, userInfo);
-                })
-                .collect(Collectors.toList());
+        Map<UUID, Map<String, Object>> usersById = lookupUsers(
+                page.getContent().stream().map(OrganizationEmployee::getUserId).toList());
+
+        return page.map(emp -> mapToEmployeeResponse(
+                emp,
+                usersById.getOrDefault(emp.getUserId(), fallbackUser(emp.getUserId()))));
+    }
+
+    @SuppressWarnings("unchecked")
+    private Map<UUID, Map<String, Object>> lookupUsers(List<UUID> ids) {
+        try {
+            String url = "http://SSOSERVICE/api/internal/users/lookup";
+            Map<String, Object> body = Map.of(
+                    "ids", ids.stream().map(UUID::toString).toList());
+            ResponseEntity<Map> response = restTemplate.postForEntity(url, body, Map.class);
+            Map<String, Map<String, Object>> raw = response.getBody();
+            if (raw == null) {
+                return Map.of();
+            }
+            Map<UUID, Map<String, Object>> result = new java.util.HashMap<>();
+            raw.forEach((key, info) -> result.put(UUID.fromString(key), info));
+            return result;
+        } catch (Exception e) {
+            log.warn("Bulk user lookup failed: {}", e.getMessage());
+            return Map.of();
+        }
     }
 
     private Map<String, Object> getUserInfo(UUID userId) {
         try {
-            String url = "http://localhost:8000/api/profile/" + userId;
+            String url = "http://SSOSERVICE/api/internal/users/" + userId;
             ResponseEntity<Map> response = restTemplate.getForEntity(url, Map.class);
             return response.getBody();
         } catch (Exception e) {
             log.warn("Could not fetch user info for {}: {}", userId, e.getMessage());
-            return Map.of(
-                    "userId", userId.toString(),
-                    "username", "Unknown User",
-                    "email", "unknown@example.com"
-            );
+            return fallbackUser(userId);
         }
+    }
+
+    private Map<String, Object> fallbackUser(UUID userId) {
+        return Map.of(
+                "userId", userId.toString(),
+                "username", "Unknown User",
+                "email", "unknown@example.com"
+        );
     }
 
     private EmployeeResponse mapToEmployeeResponse(OrganizationEmployee employee, Map<String, Object> userInfo) {
@@ -111,6 +201,8 @@ public class EmployeeManagementService {
                 .email((String) userInfo.getOrDefault("email", "unknown@example.com"))
                 .role(employee.getRole())
                 .joinedAt(employee.getJoinedAt())
+                .isActive(employee.getIsActive())
+                .isBlocked(employee.getIsBlocked())
                 .build();
     }
 }
